--- a/Backoffice.RazorPages/Pages/Category/Create.cshtml
+++ b/Backoffice.RazorPages/Pages/Category/Create.cshtml
@@ -2,12 +2,12 @@
 @model Backoffice.RazorPages.Pages.Category.CreateModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Novo";
 }
 
-<h2>Create</h2>
+<h2>Novo</h2>
 
-<h4>Category</h4>
+<h4>Categoria</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -19,14 +19,14 @@
                 <span asp-validation-for="Category.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Criar" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-page="Index">Back to List</a>
+    <a asp-page="Index">Voltar para a lista</a>
 </div>
 
 @section Scripts {
