--- a/Backoffice.RazorPages/Pages/Category/Details.cshtml
+++ b/Backoffice.RazorPages/Pages/Category/Details.cshtml
@@ -2,13 +2,13 @@
 @model Backoffice.RazorPages.Pages.Category.DetailsModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhe";
 }
 
-<h2>Details</h2>
+<h2>Detalhes</h2>
 
 <div>
-    <h4>Category</h4>
+    <h4>Categoria</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -20,6 +20,6 @@
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Category.Id">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./Edit" asp-route-id="@Model.Category.Id">Editar</a> |
+    <a asp-page="./Index">Voltar para a lista</a>
 </div>
