--- a/Backoffice.RazorPages/Pages/Category/Index.cshtml
+++ b/Backoffice.RazorPages/Pages/Category/Index.cshtml
@@ -2,13 +2,13 @@
 @model Backoffice.RazorPages.Pages.Category.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Categorias";
 }
 
-<h2>Index</h2>
+<h2>Categorias</h2>
 
 <p>
-    <a asp-page="Create">Create New</a>
+    <a asp-page="Create">Nova Categoria</a>
 </p>
 <table class="table">
     <thead>
@@ -26,9 +26,9 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-page="./Edit" asp-route-id="@item.Id">Editar</a> |
+                <a asp-page="./Details" asp-route-id="@item.Id">Detalhes</a> |
+                <a asp-page="./Delete" asp-route-id="@item.Id">Apagar</a>
             </td>
         </tr>
 }
