--- a/Backoffice.RazorPages/Pages/_Layout.cshtml
+++ b/Backoffice.RazorPages/Pages/_Layout.cshtml
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -26,7 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-page="/Index" class="navbar-brand">Backoffice.RazorPages</a>
+                <a asp-page="/Index" class="navbar-brand">Dama Backoffice</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
