Add Illustration View

--- a/Backoffice.RazorPages/Pages/Category/Delete.cshtml
+++ b/Backoffice.RazorPages/Pages/Category/Delete.cshtml
@@ -7,7 +7,7 @@
 
 <h2>Remover</h2>
 
-<h3>Tem a certeza que quer apagar o registo?</h3>
+<h3>Tem a certeza que quer remover o registo?</h3>
 <div>
     <h4>Categoria</h4>
     <hr />
