--- a/Backoffice.RazorPages/Pages/ProductType/Details.cshtml
+++ b/Backoffice.RazorPages/Pages/ProductType/Details.cshtml
@@ -2,13 +2,13 @@
 @model Backoffice.RazorPages.Pages.ProductType.DetailsModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhes";
 }
 
-<h2>Details</h2>
+<h2>Detalhes</h2>
 
 <div>
-    <h4>ProductType</h4>
+    <h4>Tipo de Produto</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -32,6 +32,6 @@
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.ProductTypeModel.Id">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./Edit" asp-route-id="@Model.ProductTypeModel.Id">Editar</a> |
+    <a asp-page="./Index">Voltar para a lista</a>
 </div>
