--- a/Backoffice.RazorPages/Pages/ProductType/Index.cshtml
+++ b/Backoffice.RazorPages/Pages/ProductType/Index.cshtml
@@ -8,7 +8,7 @@
 <h2>Tipos de Produtos</h2>
 
 <p>
-    <a asp-page="Create">Criar Novo Tipo de Produto</a>
+    <a asp-page="Create">Novo Tipo de Produto</a>
 </p>
 <table class="table">
     <thead>
