--- a/Backoffice.RazorPages/Pages/Illustrations/Index.cshtml
+++ b/Backoffice.RazorPages/Pages/Illustrations/Index.cshtml
@@ -2,13 +2,13 @@
 @model Backoffice.RazorPages.Pages.Illustrations.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Ilustrações";
 }
 
-<h2>Index</h2>
+<h2>Ilustrações</h2>
 
 <p>
-    <a asp-page="Create">Create New</a>
+    <a asp-page="Create">Nova Ilustração</a>
 </p>
 <table class="table">
     <thead>
@@ -38,9 +38,9 @@
                 @Html.DisplayFor(modelItem => item.Type)
             </td>
             <td>
-                <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-page="./Edit" asp-route-id="@item.Id">Editar</a> |
+                <a asp-page="./Details" asp-route-id="@item.Id">Detalhe</a> |
+                <a asp-page="./Delete" asp-route-id="@item.Id">Remover</a>
             </td>
         </tr>
 }
