--- a/Backoffice.RazorPages/Pages/_ValidationScriptsPartial.cshtml
+++ b/Backoffice.RazorPages/Pages/_ValidationScriptsPartial.cshtml
@@ -16,3 +16,12 @@
             integrity="sha384-JrXK+k53HACyavUKOsL+NkmSesD2P+73eDMrbTtTk0h4RmOF8hF8apPlkp26JlyH">
     </script>
 </environment>
+
+<script>
+    jQuery.extend(jQuery.validator.methods, {
+        number: function (value, element) {
+            return this.optional(element)
+                || /^-?(?:\d+|\d{1,3}(?:\.\d{3})+)(?:[,.]\d+)?$/.test(value);
+        }
+    });
+</script>
