--- a/Backoffice.RazorPages/Pages/Illustrations/Create.cshtml
+++ b/Backoffice.RazorPages/Pages/Illustrations/Create.cshtml
@@ -2,12 +2,12 @@
 @model Backoffice.RazorPages.Pages.Illustrations.CreateModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Nova";
 }
 
-<h2>Create</h2>
+<h2>Nova</h2>
 
-<h4>Illustration</h4>
+<h4>Ilustração</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -29,14 +29,14 @@
                 <span asp-validation-for="IllustrationModel.Type" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Criar" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-page="Index">Back to List</a>
+    <a asp-page="Index">Voltar para a lista</a>
 </div>
 
 @section Scripts {
