--- a/Backoffice.RazorPages/Pages/Illustrations/Delete.cshtml
+++ b/Backoffice.RazorPages/Pages/Illustrations/Delete.cshtml
@@ -2,14 +2,14 @@
 @model Backoffice.RazorPages.Pages.Illustrations.DeleteModel
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Remover";
 }
 
-<h2>Delete</h2>
+<h2>Remover</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Tem a certeza que quer remover o registo?</h3>
 <div>
-    <h4>Illustration</h4>
+    <h4>Ilustração</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -34,7 +34,7 @@
     
     <form method="post">
         <input type="hidden" asp-for="IllustrationModel.Id" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-page="./Index">Back to List</a>
+        <input type="submit" value="Remover" class="btn btn-default" /> |
+        <a asp-page="./Index">Voltar para a lista</a>
     </form>
 </div>
