--- a/Backoffice.RazorPages/Pages/Illustrations/Details.cshtml
+++ b/Backoffice.RazorPages/Pages/Illustrations/Details.cshtml
@@ -2,10 +2,10 @@
 @model Backoffice.RazorPages.Pages.Illustrations.DetailsModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhes";
 }
 
-<h2>Details</h2>
+<h2>Detalhes</h2>
 
 <div>
     <h4>Illustration</h4>
@@ -32,6 +32,6 @@
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.IllustrationModel.Id">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./Edit" asp-route-id="@Model.IllustrationModel.Id">Editar</a> |
+    <a asp-page="./Index">Voltar para a lista</a>
 </div>
