--- a/Backoffice.RazorPages/Pages/Illustrations/Delete.cshtml
+++ b/Backoffice.RazorPages/Pages/Illustrations/Delete.cshtml
@@ -8,6 +8,7 @@
 <h2>Remover</h2>
 
 <h3>Tem a certeza que quer remover o registo?</h3>
+<p class="alert alert-danger">Atenção: Esta operação vai remover todos os produtos associados a esta ilustração!</p>
 <div>
     <h4>Ilustração</h4>
     <hr />
