--- a/Backoffice.RazorPages/Pages/Illustrations/Details.cshtml
+++ b/Backoffice.RazorPages/Pages/Illustrations/Details.cshtml
@@ -18,6 +18,12 @@
             @Html.DisplayFor(model => model.IllustrationModel.Code)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.IllustrationModel.Name)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.IllustrationModel.Name)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.IllustrationModel.PictureUri)
         </dt>
         <dd>
