--- a/Backoffice.RazorPages/Pages/Illustrations/Edit.cshtml
+++ b/Backoffice.RazorPages/Pages/Illustrations/Edit.cshtml
@@ -19,6 +19,11 @@
                 <span asp-validation-for="IllustrationModel.Code" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="IllustrationModel.Name" class="control-label"></label>
+                <input asp-for="IllustrationModel.Name" class="form-control" />
+                <span asp-validation-for="IllustrationModel.Name" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="IllustrationModel.PictureUri" class="control-label"></label>
                 <input asp-for="IllustrationModel.PictureUri" class="form-control" />
                 <span asp-validation-for="IllustrationModel.PictureUri" class="text-danger"></span>
