--- a/Backoffice.RazorPages/Pages/Illustrations/Index.cshtml
+++ b/Backoffice.RazorPages/Pages/Illustrations/Index.cshtml
@@ -16,6 +16,9 @@
                 <th>
                     @Html.DisplayNameFor(model => model.IllustrationModel[0].Code)
                 </th>
+            <th>
+                @Html.DisplayNameFor(model => model.IllustrationModel[0].Name)
+            </th>
                 <th>
                     @Html.DisplayNameFor(model => model.IllustrationModel[0].PictureUri)
                 </th>
@@ -30,6 +33,9 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Code)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.PictureUri)
