--- a/Backoffice.RazorPages/Pages/Products/Create.cshtml
+++ b/Backoffice.RazorPages/Pages/Products/Create.cshtml
@@ -9,10 +9,10 @@
 
 <h4>Produto</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+<form method="post">
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <div class="row">
+        <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="ProductModel.Code" class="control-label"></label>
                 <input asp-for="ProductModel.Code" class="form-control" />
@@ -29,7 +29,7 @@
                 <span asp-validation-for="ProductModel.Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                
+
                 <label asp-for="ProductModel.Personalized" class="control-label"></label><br />
                 <label class="radio-inline"><input type="radio" asp-for="ProductModel.Personalized" value="true">Sim</label>
                 <label class="radio-inline"><input type="radio" asp-for="ProductModel.Personalized" value="false">Não</label>
@@ -42,12 +42,18 @@
             </div>
             <div class="form-group">
                 <label asp-for="ProductModel.IllustrationId" class="control-label"></label>
-                <select asp-for="ProductModel.IllustrationId" class ="form-control" asp-items="ViewBag.IllustrationId"></select>
+                <select asp-for="ProductModel.IllustrationId" class="form-control" asp-items="ViewBag.IllustrationId"></select>
+                <span asp-validation-for="ProductModel.IllustrationId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ProductModel.ProductTypeId" class="control-label"></label>
-                <select asp-for="ProductModel.ProductTypeId" class ="form-control" asp-items="ViewBag.ProductTypeId"></select>
+                <select asp-for="ProductModel.ProductTypeId" class="form-control" asp-items="ViewBag.ProductTypeId"></select>
+                <span asp-validation-for="ProductModel.ProductTypeId" class="text-danger"></span>
             </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-8">
             <hr />
             <h4>Atributos do Produto</h4>
             <table class="table">
@@ -65,46 +71,57 @@
                         <th>
                             @Html.DisplayNameFor(model => model.ProductModel.ProductAttributes[0].Price)
                         </th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody>
-                    @for (int i = 0; i < Model.ProductModel.ProductAttributes.Count; i++)
+                    @if (Model.ProductModel?.ProductAttributes?.Count > 0)
                     {
-                        <tr>
-                            <td>
-                                <input type="hidden" asp-for="ProductModel.ProductAttributes[i].Id" />
-                                <select asp-for="ProductModel.ProductAttributes[i].Type" asp-items="Html.GetEnumSelectList<ApplicationCore.Entities.ProductAttributeType>()" class="form-control"></select>
-                                <span asp-validation-for="ProductModel.ProductAttributes[i].Type" class="text-danger"></span>
-                            </td>
-                            <td>
-                                <input asp-for="ProductModel.ProductAttributes[i].Code" class="form-control"/>
-                                <span asp-validation-for="ProductModel.ProductAttributes[i].Code" class="text-danger"></span>
-                            </td>
-                            <td>
-                                <input asp-for="ProductModel.ProductAttributes[i].Name" class="form-control" />
-                                <span asp-validation-for="ProductModel.ProductAttributes[i].Name" class="text-danger"></span>
-                            </td>
-                            <td>
-                                <input asp-for="ProductModel.ProductAttributes[i].Price" class="form-control decimal" />
-                                <span asp-validation-for="ProductModel.ProductAttributes[i].Price" class="text-danger"></span>
-                            </td>
-                        </tr>
-                    }                   
+                        for (int i = 0; i < Model.ProductModel.ProductAttributes.Count; i++)
+                        {
+                            <tr>
+                                <td>
+                                    <input type="hidden" asp-for="ProductModel.ProductAttributes[i].Id" />
+                                    <input type="hidden" asp-for="ProductModel.ProductAttributes[i].ToRemove" class="to-remove" />
+                                    <select asp-for="ProductModel.ProductAttributes[i].Type" asp-items="Html.GetEnumSelectList<ApplicationCore.Entities.ProductAttributeType>()" class="form-control"></select>
+                                    <span asp-validation-for="ProductModel.ProductAttributes[i].Type" class="text-danger"></span>
+                                </td>
+                                <td>
+                                    <input asp-for="ProductModel.ProductAttributes[i].Code" class="form-control" />
+                                    <span asp-validation-for="ProductModel.ProductAttributes[i].Code" class="text-danger"></span>
+                                </td>
+                                <td>
+                                    <input asp-for="ProductModel.ProductAttributes[i].Name" class="form-control" />
+                                    <span asp-validation-for="ProductModel.ProductAttributes[i].Name" class="text-danger"></span>
+                                </td>
+                                <td>
+                                    <input asp-for="ProductModel.ProductAttributes[i].Price" class="form-control decimal" />
+                                    <span asp-validation-for="ProductModel.ProductAttributes[i].Price" class="text-danger"></span>
+                                </td>
+                                <td>
+                                    <button type="button" class="btn btn-danger remove">Remover</button>
+                                </td>
+                            </tr>
+                        }
+                    }
+
                 </tbody>
                 <tfoot>
                     <tr>
                         <td colspan="4">
-                            <input type="submit" asp-page-handler="AddAttribute" value="Adicionar Atributo" class="btn btn-default"/>                            
+                            <input type="submit" asp-page-handler="AddAttribute" value="Adicionar Atributo" class="btn btn-default" />
                         </td>
                     </tr>
                 </tfoot>
             </table>
             <div class="form-group">
-                <input type="submit" value="Criar" class="btn btn-default" />
+                <input type="submit" asp-page-handler="Save" value="Criar" class="btn btn-primary" />
             </div>
-        </form>
+
+        </div>
+
     </div>
-</div>
+</form>
 
 <div>
     <a asp-page="Index">Voltar para a lista</a>
@@ -112,4 +129,14 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+<script>
+        $(document).ready(function () {
+            $('.remove').on('click', function (e) {
+                e.preventDefault();
+                var tr = $(this).closest('tr');
+                tr.find('.to-remove').val(true);
+                tr.hide();
+            });
+        });
+</script>
 }
