--- a/Backoffice.RazorPages/Pages/Products/Edit.cshtml
+++ b/Backoffice.RazorPages/Pages/Products/Edit.cshtml
@@ -9,10 +9,10 @@
 
 <h4>Produto</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+<form method="post">
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <div class="row">
+        <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="ProductModel.Code" class="control-label"></label>
                 <input asp-for="ProductModel.Code" class="form-control" />
@@ -29,8 +29,9 @@
                 <span asp-validation-for="ProductModel.Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ProductModel.Personalized" class="control-label"></label>
-                <input asp-for="ProductModel.Personalized" class="form-control" />
+                <label asp-for="ProductModel.Personalized" class="control-label"></label><br />
+                <label class="radio-inline"><input type="radio" asp-for="ProductModel.Personalized" value="true">Sim</label>
+                <label class="radio-inline"><input type="radio" asp-for="ProductModel.Personalized" value="false">Não</label>
                 <span asp-validation-for="ProductModel.Personalized" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -47,7 +48,11 @@
                 <label asp-for="ProductModel.ProductTypeId" class="control-label"></label>
                 <select asp-for="ProductModel.ProductTypeId" class="form-control" asp-items="ViewBag.ProductTypeId"></select>
                 <span asp-validation-for="ProductModel.ProductTypeId" class="text-danger"></span>
-            </div>
+            </div>                        
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-8">
             <hr />
             <h4>Atributos do Produto</h4>
             <table class="table">
@@ -65,23 +70,60 @@
                         <th>
                             @Html.DisplayNameFor(model => model.ProductModel.ProductAttributes[0].Price)
                         </th>
+                        <th>
+                        </th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td>
+                    @if (Model.ProductModel?.ProductAttributes?.Count > 0)
+                    {
+                        for (int i = 0; i < Model.ProductModel.ProductAttributes.Count; i++)
+                        {
+                            <tr>
+                                <td>
+                                    <input type="hidden" asp-for="ProductModel.ProductAttributes[i].Id" />
+                                    <input type="hidden" asp-for="ProductModel.ProductAttributes[i].ProductId" />
+                                    <input type="hidden" asp-for="ProductModel.ProductAttributes[i].ToRemove" class="to-remove" />
+                                    @*<input type="hidden" asp-for="ProductModel.ProductAttributes[i].Type" value="@Model.ProductModel.ProductAttributes[i].Type" />*@
+                                    <select asp-for="ProductModel.ProductAttributes[i].Type" asp-items="Html.GetEnumSelectList<ApplicationCore.Entities.ProductAttributeType>()" class="form-control" ></select>
+                                    <span asp-validation-for="ProductModel.ProductAttributes[i].Type" class="text-danger"></span>
+                                </td>
+                                <td>
+                                    <input asp-for="ProductModel.ProductAttributes[i].Code" class="form-control" value="@Model.ProductModel.ProductAttributes[i].Code" />
+                                    <span asp-validation-for="ProductModel.ProductAttributes[i].Code" class="text-danger"></span>
+                                </td>
+                                <td>
+                                    <input asp-for="ProductModel.ProductAttributes[i].Name" class="form-control" value="@Model.ProductModel.ProductAttributes[i].Name" />
+                                    <span asp-validation-for="ProductModel.ProductAttributes[i].Name" class="text-danger"></span>
+                                </td>
+                                <td>
+                                    <input asp-for="ProductModel.ProductAttributes[i].Price" class="form-control decimal" value="@Model.ProductModel.ProductAttributes[i].Price" />
+                                    <span asp-validation-for="ProductModel.ProductAttributes[i].Price" class="text-danger"></span>
+                                </td>
+                                <td>
+                                    <button type="button" class="btn btn-danger remove">Remover</button>
+                                </td>
+                            </tr>
+                        }
+                    }
 
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <td colspan="4">
+                            <input type="submit" asp-page-handler="AddAttribute" value="Adicionar Atributo" class="btn btn-default" />
                         </td>
                     </tr>
-                </tbody>
+                </tfoot>
             </table>
-            <input type="hidden" asp-for="ProductModel.Id" />
             <div class="form-group">
-                <input type="submit" value="Gravar" class="btn btn-default" />
+                <input type="hidden" asp-for="ProductModel.Id" />
+                <input type="submit" asp-page-handler="Save" value="Gravar" class="btn btn-primary" />
             </div>
-        </form>
+        </div>
     </div>
-</div>
+</form>
+
 
 <div>
     <a asp-page="./Index">Voltar para a lista</a>
@@ -89,4 +131,15 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+    <script>
+        $(document).ready(function () {
+            $('.remove').on('click', function (e) {
+                e.preventDefault();
+                var tr = $(this).closest('tr');
+                tr.find('.to-remove').val(true);               
+                tr.hide();
+            });
+        });
+    </script>
 }
