fix illustration creation/edit of types

--- a/Backoffice.RazorPages/Pages/IllustrationTypes/Delete.cshtml
+++ b/Backoffice.RazorPages/Pages/IllustrationTypes/Delete.cshtml
@@ -9,7 +9,7 @@
 
 <h3>Tem a certeza que quer remover o registo?</h3>
 <div>
-    <h4>IllustrationType</h4>
+    <h4>Tipo de Ilustração</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
