--- a/Backoffice.RazorPages/Pages/IllustrationTypes/Details.cshtml
+++ b/Backoffice.RazorPages/Pages/IllustrationTypes/Details.cshtml
@@ -8,7 +8,7 @@
 <h2>Detalhes</h2>
 
 <div>
-    <h4>IllustrationType</h4>
+    <h4>Tipo de Ilustração</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
