--- a/Backoffice.RazorPages/Pages/Illustrations/Edit.cshtml
+++ b/Backoffice.RazorPages/Pages/Illustrations/Edit.cshtml
@@ -29,15 +29,17 @@
                 <span asp-validation-for="IllustrationModel.PictureUri" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="IllustrationModel.IllustrationTypeId" class="control-label"></label>
-                <select asp-for="IllustrationModel.IllustrationTypeId" asp-items="ViewBag.IllustrationTypes" class="form-control"></select>
-                <span asp-validation-for="IllustrationModel.IllustrationTypeId" class="text-danger"></span>
-                <a asp-page="../IllustrationTypes/Create" target="_blank">Criar Novo Tipo</a>
+                <div class="text-nowrap">
+                    <select asp-for="IllustrationModel.IllustrationTypeId" asp-items="ViewBag.IllustrationTypes" class="form-control col-md-10"></select>
+                    <span asp-validation-for="IllustrationModel.IllustrationTypeId" class="text-danger"></span>
+                    <button type="submit" class="btn btn-default" asp-page-handler="RefreshTypes"><i class="fa fa-refresh" aria-hidden="true"></i></button>
+                </div>
+                <a asp-page="../IllustrationTypes/Create" target="_blank">Criar Novo Tipo</a> |
                 <a asp-page="../IllustrationTypes/Index" target="_blank">Editar Tipos</a>
             </div>
             <input type="hidden" asp-for="IllustrationModel.Id" />
             <div class="form-group">
-                <input type="submit" value="Gravar" class="btn btn-default" />
+                <input type="submit" value="Gravar" class="btn btn-default" asp-page-handler="Save"  />
             </div>
         </form>
     </div>
