--- a/Backoffice.RazorPages/Pages/_Layout.cshtml
+++ b/Backoffice.RazorPages/Pages/_Layout.cshtml
@@ -52,6 +52,7 @@
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
+        <script src="https://use.fontawesome.com/1a84a5b970.js"></script>
     </environment>
     <environment exclude="Development">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
@@ -67,6 +68,7 @@
                 integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
         </script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
+        <script src="https://use.fontawesome.com/1a84a5b970.js"></script>
     </environment>
 
     @RenderSection("Scripts", required: false)
