--- a/Backoffice.RazorPages/Pages/Products/Details.cshtml
+++ b/Backoffice.RazorPages/Pages/Products/Details.cshtml
@@ -53,6 +53,12 @@
         <dd>
             @Html.DisplayFor(model => model.ProductModel.ProductType.Code)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.ProductModel.ProductSKU)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.ProductModel.ProductSKU)
+        </dd>
     </dl>
     <hr />
     <div class="row">
