--- a/Backoffice.RazorPages/Pages/Products/Index.cshtml
+++ b/Backoffice.RazorPages/Pages/Products/Index.cshtml
@@ -21,10 +21,7 @@
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.ProductModel[0].Description)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.ProductModel[0].Personalized)
-                </th>
+                </th>               
                 <th>
                     @Html.DisplayNameFor(model => model.ProductModel[0].Price)
                 </th>
@@ -33,6 +30,9 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.ProductModel[0].ProductType)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ProductModel[0].ProductSKU)
             </th>
             <th></th>
         </tr>
@@ -50,9 +50,6 @@
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
-                @(item.Personalized ? "Sim" : "Não")
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
             <td>
@@ -60,6 +57,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ProductType.Code)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ProductSKU)
             </td>
             <td>
                 <a asp-page="./Edit" asp-route-id="@item.Id">Editar</a> |
