--- a/Backoffice.RazorPages/Pages/Illustrations/Edit.cshtml
+++ b/Backoffice.RazorPages/Pages/Illustrations/Edit.cshtml
@@ -11,7 +11,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="IllustrationModel.Code" class="control-label"></label>
@@ -23,10 +23,21 @@
                 <input asp-for="IllustrationModel.Name" class="form-control" />
                 <span asp-validation-for="IllustrationModel.Name" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="IllustrationModel.PictureUri" class="control-label"></label>
                 <input asp-for="IllustrationModel.PictureUri" class="form-control" />
                 <span asp-validation-for="IllustrationModel.PictureUri" class="text-danger"></span>
+            </div>*@
+            <div class="form-group">
+                <label asp-for="IllustrationModel.IllustrationImage" class="control-label"></label>
+
+                <input type="file" asp-for="IllustrationModel.IllustrationImage" class="form-control" />
+                <span asp-validation-for="IllustrationModel.IllustrationImage" class="text-danger"></span>
+                @if (!String.IsNullOrEmpty(Model.IllustrationModel.ImageBase64))
+                {
+                 <img src="@Model.IllustrationModel.ImageBase64" class="img-thumbnail" />
+                }
+
             </div>
             <div class="form-group">
                 <div class="text-nowrap">
