--- a/Backoffice/Pages/Illustrations/Delete.cshtml
+++ b/Backoffice/Pages/Illustrations/Delete.cshtml
@@ -18,18 +18,12 @@
         </dt>
         <dd>
             @Html.DisplayFor(model => model.IllustrationModel.Code)
-        </dd>
+        </dd>        
         <dt>
-            @Html.DisplayNameFor(model => model.IllustrationModel.PictureUri)
+            @Html.DisplayNameFor(model => model.IllustrationModel.IllustrationType)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.IllustrationModel.PictureUri)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.IllustrationModel.Type)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.IllustrationModel.Type)
+            @Html.DisplayFor(model => model.IllustrationModel.IllustrationType.Code)
         </dd>
     </dl>
     
