--- a/Backoffice/Pages/ProductType/Delete.cshtml
+++ b/Backoffice/Pages/ProductType/Delete.cshtml
@@ -25,7 +25,7 @@
             @Html.DisplayFor(model => model.ProductTypeModel.Description)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.ProductTypeModel.Category)
+            @Html.DisplayNameFor(model => model.ProductTypeModel.CategoryId)
         </dt>
         <dd>
             @Html.DisplayFor(model => model.ProductTypeModel.Category.Name)
