--- a/Backoffice/Pages/ProductType/Index.cshtml
+++ b/Backoffice/Pages/ProductType/Index.cshtml
@@ -20,7 +20,7 @@
                     @Html.DisplayNameFor(model => model.ProductTypesModel[0].Description)
                 </th>
             <th>
-                @Html.DisplayNameFor(model => model.ProductTypesModel[0].Category)
+                @Html.DisplayNameFor(model => model.ProductTypesModel[0].CategoryId)
             </th>
             <th></th>
         </tr>
