--- a/Backoffice/Pages/Illustrations/Details.cshtml
+++ b/Backoffice/Pages/Illustrations/Details.cshtml
@@ -8,7 +8,7 @@
 <h2>Detalhes</h2>
 
 <div>
-    <h4>Illustration</h4>
+    <h4>Ilustração</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -24,17 +24,18 @@
             @Html.DisplayFor(model => model.IllustrationModel.Name)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.IllustrationModel.IllustrationTypeId)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.IllustrationModel.IllustrationType.Code) - @Html.DisplayFor(model => model.IllustrationModel.IllustrationType.Name)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.IllustrationModel.IllustrationImage)
         </dt>
         <dd>
             <img alt="" src="@Model.IllustrationModel.ImageBase64" class="img-thumbnail" />
         </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.IllustrationModel.IllustrationTypeId)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.IllustrationModel.IllustrationType.Code)
-        </dd>
+        
     </dl>
 </div>
 <div>
