--- a/Backoffice/Pages/Illustrations/Edit.cshtml
+++ b/Backoffice/Pages/Illustrations/Edit.cshtml
@@ -23,6 +23,16 @@
                 <input asp-for="IllustrationModel.Name" class="form-control" />
                 <span asp-validation-for="IllustrationModel.Name" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="IllustrationModel.IllustrationTypeId" class="control-label"></label>
+                <div class="text-nowrap">
+                    <select asp-for="IllustrationModel.IllustrationTypeId" asp-items="ViewBag.IllustrationTypes" class="form-control col-md-10"></select>
+                    <span asp-validation-for="IllustrationModel.IllustrationTypeId" class="text-danger"></span>
+                    <button type="submit" class="btn btn-default" asp-page-handler="RefreshTypes"><i class="fa fa-refresh" aria-hidden="true"></i></button>
+                </div>
+                <a asp-page="../IllustrationTypes/Create" target="_blank">Criar Novo Tipo</a> |
+                <a asp-page="../IllustrationTypes/Index" target="_blank">Editar Tipos</a>
+            </div>
             @*<div class="form-group">
                 <label asp-for="IllustrationModel.PictureUri" class="control-label"></label>
                 <input asp-for="IllustrationModel.PictureUri" class="form-control" />
@@ -39,15 +49,7 @@
                 }
 
             </div>
-            <div class="form-group">
-                <div class="text-nowrap">
-                    <select asp-for="IllustrationModel.IllustrationTypeId" asp-items="ViewBag.IllustrationTypes" class="form-control col-md-10"></select>
-                    <span asp-validation-for="IllustrationModel.IllustrationTypeId" class="text-danger"></span>
-                    <button type="submit" class="btn btn-default" asp-page-handler="RefreshTypes"><i class="fa fa-refresh" aria-hidden="true"></i></button>
-                </div>
-                <a asp-page="../IllustrationTypes/Create" target="_blank">Criar Novo Tipo</a> |
-                <a asp-page="../IllustrationTypes/Index" target="_blank">Editar Tipos</a>
-            </div>
+            
             <input type="hidden" asp-for="IllustrationModel.Id" />
             <div class="form-group">
                 <input type="submit" value="Gravar" class="btn btn-default" asp-page-handler="Save"  />
