Add unique code

--- a/Backoffice/Pages/Illustrations/Index.cshtml
+++ b/Backoffice/Pages/Illustrations/Index.cshtml
@@ -9,6 +9,8 @@
 
 <p>
     <a asp-page="Create">Nova Ilustração</a>
+     | 
+    <a asp-page="../IllustrationTypes/Index">Gerir Tipos de Ilustrações</a>
 </p>
 <table class="table">
     <thead>
