--- a/Backoffice/Pages/Illustrations/Index.cshtml
+++ b/Backoffice/Pages/Illustrations/Index.cshtml
@@ -12,7 +12,7 @@
      | 
     <a asp-page="../IllustrationTypes/Index">Gerir Tipos de Ilustrações</a>
 </p>
-<table class="table">
+<table class="table table-pagination">
     <thead>
         <tr>
                 <th>
