--- a/Backoffice/Pages/ProductType/Index.cshtml
+++ b/Backoffice/Pages/ProductType/Index.cshtml
@@ -10,7 +10,7 @@
 <p>
     <a asp-page="Create">Novo Tipo de Produto</a>
 </p>
-<table class="table">
+<table class="table table-pagination">
     <thead>
         <tr>
                 <th>
