--- a/Backoffice/Pages/Category/Create.cshtml
+++ b/Backoffice/Pages/Category/Create.cshtml
@@ -13,9 +13,9 @@
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Category.Name" class="control-label"></label>
-                <input asp-for="Category.Name" class="form-control" />
+            <div class="form-group required">
+                <label asp-for="Category.Name" class="control-label"></label>                
+                <input asp-for="Category.Name" class="form-control" />                
                 <span asp-validation-for="Category.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
