--- a/Backoffice/Pages/IllustrationTypes/Create.cshtml
+++ b/Backoffice/Pages/IllustrationTypes/Create.cshtml
@@ -13,7 +13,7 @@
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            <div class="form-group required">
                 <label asp-for="IllustrationType.Code" class="control-label"></label>
                 <input asp-for="IllustrationType.Code" class="form-control" />
                 <span asp-validation-for="IllustrationType.Code" class="text-danger"></span>
