--- a/src/DamaShopWeb/Web/Pages/_Layout.cshtml
+++ b/src/DamaShopWeb/Web/Pages/_Layout.cshtml
@@ -6,11 +6,11 @@
     <title>@ViewData["Title"] - Loja</title>
 
     <environment names="Development">
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css"/>
         <link rel="stylesheet" href="~/css/app.css" />
     </environment>
     <environment names="Staging,Production">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.5/css/bootstrap.min.css"
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous"
               asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <link rel="stylesheet" href="~/css/app.min.css" asp-append-version="true" />
@@ -23,20 +23,74 @@
     <link rel="stylesheet" href="~/css/orders/orders.component.css" />
 </head>
 <body>
-    <header class="navbar navbar-light navbar-static-top">
-        <div class="container">
-            <article class="row">
+    @*<header>
+        <article>*@
+    <nav class="navbar navbar-dark navbar-expand-lg background_gradient">
+        <a id="brand-mobile-image" class="navbar-brand" href="https://www.damanojornal.com">
+            <img src="~/images/brand.png" width="50px;" wialt="eShop On Web" />
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-md-center" id="navbarSupportedContent">
+            <ul class="navbar-nav mx-auto w-100 justify-content-end">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Acessórios</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Papelaria</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Decoração</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Para Eles</a>
+                </li>
+            </ul>
+            <div class="brand-image justify-content-center text-center">
+                <a href="https://www.damanojornal.com" class="navbar-brand">
+                    <img src="~/images/brand.png" width="137px" alt="eShop On Web" />
+                </a>
+                <h1>A Loja</h1>
+            </div>
+            <ul class="navbar-nav mx-auto w-100">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Kids</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Dogs</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Presentes</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Vestuário</a>
+                </li>
+            </ul>
+            <ul class="nav navbar-nav ml-auto justify-content-end">
+                <li class="nav-item">
+                    <div class="ml-auto my-2 my-lg-0">
+                        @await Html.PartialAsync("_LoginPartial")
+                    </div>
+                </li>
+            </ul>
 
-                <section class="col-lg-7 col-md-6 col-xs-12">
-                    <a href="https://www.damanojornal.com" class="navbar-brand">
-                        <img src="~/images/brand.png" alt="eShop On Web" />
-                    </a>
-                </section>
-                @await Html.PartialAsync("_LoginPartial")
-            </article>
         </div>
-    </header>
-
+    </nav>
+    <div height="100px">
+        @*<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 100" preserveAspectRatio="none">
+            <path class="elementor-shape-fill" opacity="0.33" d="M473,67.3c-203.9,88.3-263.1-34-320.3,0C66,119.1,0,59.7,0,59.7V0h1000v59.7 c0,0-62.1,26.1-94.9,29.3c-32.8,3.3-62.8-12.3-75.8-22.1C806,49.6,745.3,8.7,694.9,4.7S492.4,59,473,67.3z"></path>
+            <path class="elementor-shape-fill" opacity="0.66" d="M734,67.3c-45.5,0-77.2-23.2-129.1-39.1c-28.6-8.7-150.3-10.1-254,39.1 s-91.7-34.4-149.2,0C115.7,118.3,0,39.8,0,39.8V0h1000v36.5c0,0-28.2-18.5-92.1-18.5C810.2,18.1,775.7,67.3,734,67.3z"></path>
+            <path class="elementor-shape-fill" d="M766.1,28.9c-200-57.5-266,65.5-395.1,19.5C242,1.8,242,5.4,184.8,20.6C128,35.8,132.3,44.9,89.9,52.5C28.6,63.7,0,0,0,0 h1000c0,0-9.9,40.9-83.6,48.1S829.6,47,766.1,28.9z"></path>
+        </svg>*@
+        <svg xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" viewBox="0 0 1000 100">
+            <path fill="#e3f2f2" id="svg_1" d="m473,67.3c-203.9,88.3 -263.1,-34 -320.3,0c-86.7,51.8 -152.7,-7.6 -152.7,-7.6l0,-59.7l1000,0l0,59.7c0,0 -62.1,26.1 -94.9,29.3c-32.8,3.3 -62.8,-12.3 -75.8,-22.1c-23.3,-17.3 -84,-58.2 -134.4,-62.2s-202.5,54.3 -221.9,62.6z" opacity="0.33" class="elementor-shape-fill" />
+            <path fill="#e3f2f2" id="svg_2" d="m734,67.3c-45.5,0 -77.2,-23.2 -129.1,-39.1c-28.6,-8.7 -150.3,-10.1 -254,39.1s-91.7,-34.4 -149.2,0c-86,51 -201.7,-27.5 -201.7,-27.5l0,-39.8l1000,0l0,36.5c0,0 -28.2,-18.5 -92.1,-18.5c-97.7,0.1 -132.2,49.3 -173.9,49.3z" opacity="0.66" class="elementor-shape-fill" />
+            <path fill="#cdefef" id="svg_3" d="m766.1,28.9c-200,-57.5 -266,65.5 -395.1,19.5c-129,-46.6 -129,-43 -186.2,-27.8c-56.8,15.2 -52.5,24.3 -94.9,31.9c-61.3,11.2 -89.9,-52.5 -89.9,-52.5l1000,0c0,0 -9.9,40.9 -83.6,48.1s-86.8,-1.1 -150.3,-19.2z" class="elementor-shape-fill" />
+        </svg>
+    </div>
+    @*</article>
+        </header>*@
     @RenderBody()
 
 
