--- a/src/DamaShopWeb/Web/wwwroot/css/app.css
+++ b/src/DamaShopWeb/Web/wwwroot/css/app.css
@@ -10,6 +10,13 @@
     src: url("../fonts/Montserrat-Bold.eot?") format("eot"), url("../fonts/Montserrat-Bold.woff") format("woff"), url("../fonts/Montserrat-Bold.ttf") format("truetype"), url("../fonts/Montserrat-Bold.svg#Montserrat") format("svg");
 }
 
+@font-face {
+    font-family: Lily Script One;
+    font-weight: 700;
+    src: url("../fonts/LilyScriptOne-Regular.ttf") format("truetype");
+}
+
+
 html,
 body {
     font-family: Montserrat, sans-serif;
@@ -84,3 +91,42 @@ a:visited {
         color: #75B918;
         transition: color 0.35s;
     }
+
+/* DamaShopWeb App Layout */
+h1{
+    color: #000000;
+    font-family: "Lily Script One", Sans-serif;
+    font-size: 41px;
+    font-weight: 100;
+    font-style: normal;
+}
+
+
+.background_gradient {
+    background-color: transparent;
+    background-image: linear-gradient(180deg, #5fcbcb 0%, #cdefef 100%);
+    transition: background 0.3s, border 0.3s, border-radius 0.3s, box-shadow 0.3s;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding: 0px 0px 40px 0px;
+}
+
+@media screen and (max-width: 992px) {
+    .brand-image {
+        display: none;
+    }    
+}
+@media screen and (min-width: 992px) {
+    #brand-mobile-image {
+        display: none;
+    }
+}
+
+
+.navbar-dark .navbar-nav a:hover {
+    border-bottom: 3px solid #fff;
+    color: #fff;
+}
+.navbar-dark .navbar-nav .nav-link {
+    color:#fff;
+}
